--- a/back-end/src/main/resources/application.properties
+++ b/back-end/src/main/resources/application.properties
@@ -5,10 +5,10 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.url=jdbc:postgresql://localhost:5432/shop_arabic
 spring.datasource.username=postgres
 spring.datasource.password=Rita1988pG
-
 # Hibernate options
-#spring.jpa.generate-ddl=true
-spring.jpa.properties.hibernate.hbm2ddl.auto=update
+spring.jpa.generate-ddl=true
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.hbm2ddl.auto=create
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL9Dialect
 spring.jpa.properties.hibernate.jdbc.lob.non_contaxtual_creation=true
 
